k8s/apps/mochi/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mochi
  namespace: mochi
spec:
  selector:
    app: mochi
  ports:
    - port: 3000
      targetPort: 3000
